--- a/css/style.css
+++ b/css/style.css
@@ -955,33 +955,40 @@ svg:active path {
 }
 
 .housing-item {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  align-content: start;
+  display: flex;
+  align-items: flex-start;
+  width: 100%;
+}
 
+.housing-item p{
 
 }
 
-.hotel-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+ё
 
+
+.hotel-container{
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+
+
+  padding-left: 37px;
+  padding-top: 10px;
 
 }
 
-.hotel-container img {
-  grid-column-start: 1;
-  grid-column-end: 2;
-  width: 135px;
-  height: 90px;
+
+.hotel-specification {
+  display: flex;
+
+  padding-left: 37px;
+  padding-top: 23px;
 
 }
-
-
 
 .hotel-title {
-  grid-column-start: 2;
-  grid-column-end: 3;
+
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
@@ -989,33 +996,17 @@ svg:active path {
   padding: 0;
   margin: 0;
 
-}
-
-.hotel-container h3 {
 
 }
 
-.hotel-container p {
 
-}
 
 .hotel-type {
-  grid-column-start: 2;
-  grid-column-end: 3;
+
   color: var(--basic-black);
   padding: 0;
   margin: 0;
 
-}
-
-.test {
-  display: flex;
-  flex-direction: column;
-}
-
-.hotel-parameter {
-  display: flex;
-  justify-content: space-between;
 }
 
 .hotel-type,
@@ -1104,9 +1095,15 @@ svg:active path {
 
 
 .rating{
-  grid-column-start: 3;
-  grid-column-end: 4;
-  text-align: end;
+  display: flex;
+  width: 110px;
+  height: 27px;
+  flex-wrap: wrap;
+  justify-self: end;
+}
+
+.rating span {
+  align-items: flex-end;
 
 }
 
